Fixed input rounding on mobile

--- a/sass/components/_search.scss
+++ b/sass/components/_search.scss
@@ -18,6 +18,7 @@
         height: 0px;
         border: none;
         transition: all .2s linear;
+        border-radius: 0;
     }
     &__checkbox:checked ~ &__input {
         width: 100px;
